--- a/public/css/syngency.css
+++ b/public/css/syngency.css
@@ -24,7 +24,7 @@
 .syngency-model-measurements {
 	list-style: none;
 	padding: 0;
-	margin: 0;
+	margin: 0 0 30px 0;
 }
 
 .syngency-model-measurements li {
