--- a/public/css/syngency.css
+++ b/public/css/syngency.css
@@ -1,4 +1,6 @@
-/* Divisions template */
+/**** DIVISIONS *****************************************/
+
+/* Gender filter */
 
 .syngency-gender-filter {
 	list-style: none;
@@ -35,6 +37,46 @@
 	text-decoration: underline;
 }
 
+/* Index filter */
+
+.syngency-index-filter {
+	list-style: none;
+	margin: 0 0 30px 0;
+	padding: 0;
+}
+
+.syngency-index-filter li {
+	display: inline;
+	padding-right: 5px;
+	margin-right: 10px;
+	border-right: 1px solid #ccc;
+}
+
+.syngency-index-filter a {
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	font-weight: 700;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #999;
+	letter-spacing: 0.5px;
+	box-shadow: none !important;
+}
+
+.syngency-index-filter a.active {
+	font-weight: bold;
+	color: #191919;
+	text-decoration: underline;
+}
+
+.syngency-index-filter li:last-child {
+	margin-right: 0;
+	border-right: 0;
+}
+
+
+/* Model headshot */
+
 .syngency-division-model {
 	display: inline-block;
 	width: auto;
@@ -58,7 +100,7 @@
 	letter-spacing: 0.5px;
 }
 
-/* Model Template */
+/**** MODELS *****************************************/
 
 .syngency-model-gallery-name {
 	border-bottom: 1px solid #ddd;
@@ -90,8 +132,6 @@
 }
 
 .syngency-model-galleries {
-	position: relative;
-	top: 30px;
 	list-style: none;
 	padding: 0;
 	margin: 0;
@@ -132,14 +172,11 @@
 }
 
 .syngency-model-gallery li {
-	display: inline;
-	margin-right: 15px;
-}
-
-.syngency-model-gallery-image a {
 	display: inline-block;
-	text-decoration: none !important;
 	margin: 0 15px 15px 0;
+	padding: 5px;
+	border: 1px solid #eee;
+	box-shadow: none !important;
 }
 
 .syngency-model-gallery-image a img {
